# cctp-v2-sdk

./: Cargo.toml  README.md  config-dev.yaml  config.yaml  message_transmitter.abi.json  token_message.abi.json  usdc.abi.json
src/: cctpv2.rs  config.rs  lib.rs  main.rs  provider_provider.rs
src/circle/: api.rs
src/contract/: message_transmitter.rs  mod.rs  token_message.rs  usdc.rs
tests/: test.rs
