[package]
name = "cctp-v2-sdk"
version = "0.1.0"
edition = "2024"


[dependencies]
alloy = { version = "0.11", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_yaml = "0.9.33"
tokio = { version = "1.44.1",features = ["full"] }
reqwest = { version = "0.12.12" ,features = ["blocking"]}
log = "0.4.27"
anyhow = "1.0.96"